--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "core-js": "^3.15.1",
     "node-sass": "4.12.0",
     "nuxt": "^2.15.7",
-    "sass-loader": "8.0.2"
+    "sass-loader": "8.0.2",
+    "vue-content-loader": "^2.0.0"
   },
   "devDependencies": {
     "@nuxtjs/style-resources": "^1.2.0",
