--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "node-sass": "4.12.0",
     "nuxt": "^2.15.7",
     "sass-loader": "8.0.2",
-    "vue-content-loader": "^2.0.0"
+    "vue-content-loader": "0.2"
   },
   "devDependencies": {
     "@nuxtjs/style-resources": "^1.2.0",
