--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "4.12.0",
     "nuxt": "^2.15.7",
     "sass-loader": "8.0.2",
+    "tua-body-scroll-lock": "^1.2.1",
     "vue-content-loader": "0.2"
   },
   "devDependencies": {
