--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@kangc/v-md-editor": "^1.7.8",
     "ant-design-vue": "^1.7.6",
+    "axios": "^0.24.0",
+    "babel-polyfill": "^6.26.0",
     "core-js": "^3.15.1",
+    "hls.js": "^1.1.2",
     "node-sass": "4.12.0",
     "nuxt": "^2.15.7",
     "sass-loader": "8.0.2",
     "tua-body-scroll-lock": "^1.2.1",
-    "vue-content-loader": "0.2"
+    "vconsole": "^3.9.5",
+    "vue-aplayer": "^1.6.1",
+    "vue-content-loader": "0.2",
+    "vue-lazyload": "^1.3.3",
+    "vue-progressive-image": "^3.2.0"
   },
   "devDependencies": {
     "@nuxtjs/style-resources": "^1.2.0",
@@ -28,6 +36,7 @@
     "eslint-plugin-html": "^6.1.2",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
     "svg-sprite-loader": "^6.0.9"
